<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:nestedScrollingEnabled="false">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="120dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="250dp"
            android:layout_weight="1"
            android:id="@+id/editTextSearch" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/search_for_room"
            android:id="@+id/buttonSearchRoom"
            android:layout_below="@id/editTextSearch"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/search_for_prog"
            android:id="@+id/buttonSearchProg"
            android:layout_marginTop="5dp"
            android:layout_below="@id/buttonSearchRoom"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/change_place"
            android:id="@+id/buttonChangePlace"
            android:layout_marginTop="5dp"
            android:layout_below="@id/buttonSearchProg"/>

    </RelativeLayout>

</LinearLayout>

