<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="mah.sys.locator.SplashActivity"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="100dp">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="250dp"
            android:layout_weight="1"
            android:id="@+id/editTextSearch" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/search_for_room"
            android:id="@+id/buttonSearchRoom"
            android:layout_below="@id/editTextSearch"
            android:backgroundTint="@color/buttonColor"
            android:textColor="#fff"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/search_for_prog"
            android:id="@+id/buttonSearchProg"
            android:layout_marginTop="5dp"
            android:layout_below="@id/buttonSearchRoom"
            android:backgroundTint="@color/buttonColor"
            android:textColor="#fff"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/change_place"
            android:id="@+id/buttonChangePlace"
            android:layout_marginTop="55dp"
            android:layout_below="@id/buttonSearchProg"
            android:backgroundTint="@color/buttonColor"
            android:textColor="#fff"/>

    </RelativeLayout>


</RelativeLayout>
