<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="mah.sys.locator.SplashActivity"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choosePlace"
        android:layout_marginTop="50dp"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <FrameLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout"
        android:layout_below="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/buttonChoose"
        android:layout_alignStart="@+id/buttonChoose">

        <mah.sys.locator.DelayAutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:inputType="textCapSentences"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/choosePlaceField"
            android:imeOptions="flagNoExtractUi|actionSearch"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:visibility="gone"/>
    </FrameLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose"
        android:id="@+id/buttonChoose"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonChoose"
        android:background="@drawable/logo"
        android:layout_marginTop="30dp"/>
</RelativeLayout>
