<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/guideHeader">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtGuideStep"
        android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/guideFooter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtGuideDesc"
            android:text="@string/loading"
            android:layout_centerHorizontal="true" />
        <View android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtGuideDesc"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/btnText_cancel"
            android:id="@+id/btnGuideBack"
            android:layout_below="@+id/txtGuideDesc"
            android:layout_alignRight="@id/strut"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/arrowRight"
            android:id="@+id/btnGuideForward"
            android:layout_below="@+id/txtGuideDesc"
            android:layout_alignLeft="@id/strut"
            android:layout_alignParentRight="true"
            android:enabled="false"/>
    </RelativeLayout>

</LinearLayout>